# notepy

./: .gitignore  README.md  pyproject.toml
notepy/: __main__.py  notes.py  utils.py  zettelkasten.py
notepy/cli/: __init__.py  base_cli.py  cli.py  cli_config.json  cli_config.py  colors.py  git_wrapper.py  interactive_selection.py  repl.py  select.py
notepy/parser/: __init__.py  parser.py
notepy/wrappers/: __init__.py  base_wrapper.py  editor_wrapper.py  git_wrapper.py
notepy/zettelkasten/: __init__.py  notes.py  sql.py  zettelkasten.py
tests/: test_notes.py
tests/fixtures/: example_note.md
