[tool.poetry]
name = "notepy"
version = "0.2.0"
description = "CLI program to manage your notes."
authors = ["Lorenzo Drumond <drumondlorenzo@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notepy = "notepy.__main__:run"
